<?xml version="1.0" encoding="utf-8"?>
<!--
  Copyright 2026 CNM Ingenuity, Inc.

  Licensed under the Apache License, Version 2.0 (the "License");
  you may not use this file except in compliance with the License.
  You may obtain a copy of the License at

      http://www.apache.org/licenses/LICENSE-2.0

  Unless required by applicable law or agreed to in writing, software
  distributed under the License is distributed on an "AS IS" BASIS,
  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  See the License for the specific language governing permissions and
  limitations under the License.
-->
<androidx.core.widget.NestedScrollView
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:fillViewport="true">

  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="@dimen/full_dynamic_spacing">

    <TextView
      android:id="@+id/form_title"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginBottom="@dimen/full_dynamic_spacing"
      android:text="Report Details"
      android:textAppearance="?attr/textAppearanceHeadlineSmall"/>

    <com.google.android.material.textfield.TextInputLayout
      android:id="@+id/description_layout"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginBottom="@dimen/full_dynamic_spacing"
      android:hint="@string/description_hint"
      app:counterEnabled="true"
      app:counterMaxLength="500">

      <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/description_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:enabled="false"
        android:focusable="false"
        android:gravity="top|start"
        android:inputType="textMultiLine"
        android:maxLength="500"
        android:minLines="3"
        tools:text="Illegal dumping behind warehouse"/>

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
      android:id="@+id/accepted_state_label"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginBottom="@dimen/half_dynamic_spacing"
      android:text="Status"
      android:textAppearance="?attr/textAppearanceTitleMedium"/>

    <com.google.android.material.textfield.TextInputLayout
      android:id="@+id/accepted_state_layout"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginBottom="@dimen/full_dynamic_spacing"
      app:endIconMode="dropdown_menu">

      <com.google.android.material.textfield.MaterialAutoCompleteTextView
        android:id="@+id/accepted_state_value"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:enabled="false"
        android:focusable="false"
        tools:text="Under Review"/>

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginBottom="@dimen/half_dynamic_spacing"
      android:text="@string/issue_type_label"
      android:textAppearance="?attr/textAppearanceTitleMedium"/>

    <com.google.android.material.chip.ChipGroup
      android:id="@+id/issue_type_chip_group"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginBottom="@dimen/full_dynamic_spacing"
      app:selectionRequired="false"
      app:singleSelection="false"/>

    <TextView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginBottom="@dimen/half_dynamic_spacing"
      android:text="@string/location_label"
      android:textAppearance="?attr/textAppearanceTitleMedium"/>

    <com.google.android.material.textfield.TextInputLayout
      android:id="@+id/location_layout"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginBottom="@dimen/full_dynamic_spacing"
      android:hint="@string/location_hint"
      app:endIconMode="none">

      <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/location_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:enabled="false"
        android:focusable="false"
        android:inputType="textPostalAddress"
        android:maxLines="2"
        tools:text="Behind the storefront"/>

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginBottom="@dimen/half_dynamic_spacing"
      android:text="@string/image_label"
      android:textAppearance="?attr/textAppearanceTitleMedium"/>

    <androidx.recyclerview.widget.RecyclerView
      android:id="@+id/image_list"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginBottom="@dimen/full_dynamic_spacing"
      android:nestedScrollingEnabled="false"
      tools:listitem="@layout/item_report_image"/>

  </LinearLayout>

</androidx.core.widget.NestedScrollView>
